force-app/main/default/objects/PEO_Onboarding_Document__c/PEO_Onboarding_Document__c.object-meta.xml
<CustomObject>
    <label>PEO Underwriting Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PEO Underwriting Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PEO Underwriting Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>