force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Date_Sent_to_Clientspace__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Clientspace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent to Clientspace</label>
    <type>DateTime</type>
</CustomField>