force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Date_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Uploaded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Uploaded</label>
    <type>DateTime</type>
</CustomField>