force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Docs_Sent_to_Clientspace__c.field-meta.xml
<CustomField>
    <fullName>Docs_Sent_to_Clientspace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Docs Sent to Clientspace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>