force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>ADDMONTHS( PEO_Onboarding_Checklist__r.Opportunity__r.CloseDate ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>