force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PEO Underwriting Documents</relationshipLabel>
    <relationshipName>PEO_Underwriting_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>