force-app/main/default/objects/PEO_Onboarding_Document__c/fields/PEO_Onboarding_Checklist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Onboarding_Checklist__c</fullName>
    <label>PEO Onboarding Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipLabel>PEO Underwriting Documents</relationshipLabel>
    <relationshipName>PEO_Onboarding_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>