force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Routing_Name__c.field-meta.xml
<CustomField>
    <fullName>Routing_Name__c</fullName>
    <description>Links up to PEO Onboarding Document Map Custom setting by name</description>
    <label>Routing Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>Claims Information</fullName>
            </value>
            <value>
                <fullName>Health Insurance Renewal</fullName>
            </value>
            <value>
                <fullName>Health Insurance Summary</fullName>
            </value>
            <value>
                <fullName>Health Invoice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll Register</fullName>
            </value>
            <value>
                <fullName>SUI Rate Forms</fullName>
            </value>
            <value>
                <fullName>WC Declarations Page</fullName>
            </value>
            <value>
                <fullName>WC Loss Runs</fullName>
            </value>
            <value>
                <fullName>EPLI</fullName>
            </value>
            <value>
                <fullName>PEO Information Sheet</fullName>
            </value>
            <value>
                <fullName>RAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>