force-app/main/default/objects/PEO_Onboarding_Document__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted by Prospect</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
            <value>
                <fullName>Submitted to Clientspace</fullName>
            </value>
            <value>
                <fullName>Send to Clientspace Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>